@@ -19,7 +19,6 @@ import no.nav.pto.veilarbportefolje.domene.YtelseMapping;
 import no.nav.pto.veilarbportefolje.domene.value.PersonId;
 import no.nav.pto.veilarbportefolje.domene.value.VeilederId;
 import no.nav.pto.veilarbportefolje.opensearch.domene.OppfolgingsBruker;
-import no.nav.pto.veilarbportefolje.util.DbUtils;
 import no.nav.pto.veilarbportefolje.util.UnderOppfolgingRegler;
 import no.nav.sbl.sql.SqlUtils;
 import no.nav.sbl.sql.where.WhereClause;
@@ -70,43 +69,6 @@ public class BrukerRepository {
         this.namedParameterJdbcTemplate = namedParameterJdbcTemplate;
     }
 
-    public List<OppfolgingsBruker> hentAlleBrukereUnderOppfolging() {
-        db.setFetchSize(10_000);
-
-        List<OppfolgingsBruker> alleBrukere = SqlUtils
-                .select(db, Table.VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> harOppfolgingsFlaggSatt(rs) ? mapTilOppfolgingsBruker(rs) : null)
-                .column("*")
-                .executeToList()
-                .stream()
-                .filter(Objects::nonNull)
-                .collect(toList());
-        db.setFetchSize(-1);
-        return alleBrukere;
-    }
-
-    public List<String> hentFnrFraOppfolgingBrukerTabell(int fromExclusive, int toInclusive) {
-        String sql = "SELECT FODSELSNR "
-                     + "FROM (SELECT "
-                     + "BRUKER.FODSELSNR, "
-                     + "rownum rn "
-                     + "FROM ( "
-                     + "SELECT * "
-                     + "FROM OPPFOLGINGSBRUKER "
-                     + "ORDER BY FODSELSNR "
-                     + ") "
-                     + "BRUKER "
-                     + "WHERE rownum <= :to "
-                     + ")"
-                     + "WHERE rn > :from ";
-
-        Map<String, Integer> parameters = Map.of(
-                "from", fromExclusive,
-                "to", toInclusive
-        );
-
-        return namedParameterJdbcTemplate.queryForList(sql, parameters, String.class);
-    }
-
     public Optional<Integer> hentAntallBrukereUnderOppfolging() {
         Integer count = db.query(countOppfolgingsBrukereSql(), rs -> {
             rs.next();
@@ -117,13 +79,31 @@ public class BrukerRepository {
 
     private String countOppfolgingsBrukereSql() {
         return "SELECT COUNT(*) FROM VW_PORTEFOLJE_INFO " +
-               "WHERE FORMIDLINGSGRUPPEKODE = 'ARBS' " +
-               "OR OPPFOLGING = 'J' " +
-               "OR (FORMIDLINGSGRUPPEKODE = 'IARBS' AND KVALIFISERINGSGRUPPEKODE IN ('BATT', 'BFORM', 'VARIG', 'IKVAL', 'VURDU', 'OPPFI'))";
+                "WHERE FORMIDLINGSGRUPPEKODE = 'ARBS' " +
+                "OR OPPFOLGING = 'J' " +
+                "OR (FORMIDLINGSGRUPPEKODE = 'IARBS' AND KVALIFISERINGSGRUPPEKODE IN ('BATT', 'BFORM', 'VARIG', 'IKVAL', 'VURDU', 'OPPFI'))";
     }
 
-    public Optional<OppfolgingsBruker> hentBrukerFraView(AktorId aktoerId) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
+    public Optional<AktorId> hentAktorIdFraView(Fnr fnr) {
+        return Optional.ofNullable(
+                select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> rs.getString("AKTOERID"))
+                        .column("AKTOERID")
+                        .where(WhereClause.equals("FODSELSNR", fnr.toString()))
+                        .execute()
+        ).map(AktorId::of);
+    }
+
+    public Optional<AktorId> hentAktorIdFraView(PersonId personid) {
+        return Optional.ofNullable(
+                select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> rs.getString("AKTOERID"))
+                        .column("AKTOERID")
+                        .where(WhereClause.equals("PERSON_ID", personid.toString()))
+                        .execute()
+        ).map(AktorId::of);
+    }
+
+    public Optional<OppfolgingsBruker> hentBrukerFraView(AktorId aktoerId, boolean brukPostgres) {
+        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> mapTilOppfolgingsBruker(rs, brukPostgres))
                 .column("*")
                 .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
                 .execute();
@@ -131,35 +111,18 @@ public class BrukerRepository {
         return Optional.ofNullable(bruker);
     }
 
-    public Optional<OppfolgingsBruker> hentBrukerFraView(Fnr fnr) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
-                .column("*")
-                .where(WhereClause.equals("FODSELSNR", fnr.toString()))
-                .execute();
 
-        return Optional.ofNullable(bruker);
-    }
-
-    public Optional<OppfolgingsBruker> hentBrukerFraView(PersonId personid) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
-                .column("*")
-                .where(WhereClause.equals("PERSON_ID", personid.toString()))
-                .execute();
-
-        return Optional.ofNullable(bruker);
-    }
-
-    public List<OppfolgingsBruker> hentBrukereFraView(List<AktorId> aktorIds) {
+    public List<OppfolgingsBruker> hentBrukereFraView(List<AktorId> aktorIds, boolean brukPostgres) {
         db.setFetchSize(1000);
         List<String> ids = aktorIds.stream().map(AktorId::get).collect(toList());
         return SqlUtils
-                .select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> erUnderOppfolging(rs) ? mapTilOppfolgingsBruker(rs) : null)
+                .select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> erUnderOppfolging(rs) ? mapTilOppfolgingsBruker(rs, brukPostgres) : null)
                 .column("*")
                 .where(in("AKTOERID", ids))
                 .executeToList()
                 .stream()
                 .filter(Objects::nonNull)
-                .collect(toList());
+                .toList();
     }
 
     public boolean erUnderOppfolging(ResultSet rs) {
@@ -255,19 +218,19 @@ public class BrukerRepository {
                 .select(db, AKTOERID_TO_PERSONID.TABLE_NAME, rs -> rs == null ? null : AktorId.of(rs.getString(AKTOERID_TO_PERSONID.AKTOERID)))
                 .column(AKTOERID_TO_PERSONID.AKTOERID)
                 .where(
-                    WhereClause.equals(AKTOERID_TO_PERSONID.PERSONID, personId.getValue())
-                    .and(
-                    WhereClause.equals(AKTOERID_TO_PERSONID.GJELDENE,0))
+                        WhereClause.equals(AKTOERID_TO_PERSONID.PERSONID, personId.getValue())
+                                .and(
+                                        WhereClause.equals(AKTOERID_TO_PERSONID.GJELDENE, 0))
                 ).executeToList());
     }
 
     public Try<PersonId> retrievePersonid(AktorId aktoerId) {
         return Try.of(
-                () -> select(db, AKTOERID_TO_PERSONID.TABLE_NAME, this::mapToPersonIdFromAktorIdToPersonId)
-                        .column("PERSONID")
-                        .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
-                        .execute()
-        )
+                        () -> select(db, AKTOERID_TO_PERSONID.TABLE_NAME, this::mapToPersonIdFromAktorIdToPersonId)
+                                .column("PERSONID")
+                                .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
+                                .execute()
+                )
                 .onFailure(e -> log.warn("Fant ikke personid for aktoerid: " + aktoerId, e));
     }
 
@@ -408,12 +371,12 @@ public class BrukerRepository {
     private String getPersonIdsFromFnrsSQL() {
         return
                 "SELECT " +
-                "person_id, " +
-                "fodselsnr " +
-                "FROM " +
-                "OPPFOLGINGSBRUKER " +
-                "WHERE " +
-                "fodselsnr in (:fnrs)";
+                        "person_id, " +
+                        "fodselsnr " +
+                        "FROM " +
+                        "OPPFOLGINGSBRUKER " +
+                        "WHERE " +
+                        "fodselsnr in (:fnrs)";
     }
 
     private String retrieveBrukerdataSQL() {
